--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/weekend?useUnicode=true&characterEncoding=utf-8
+url=jdbc:mysql://localhost:3306/fish_game?useUnicode=true&characterEncoding=utf-8
 username=root
 password=root
 
