--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -64,6 +64,6 @@
     </servlet-mapping>
 
     <welcome-file-list>
-        <welcome-file> </welcome-file>
+        <welcome-file>/index.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
